# handy-deepspeech

./: .gitlab-ci.yml  Cargo.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.github.razzeee.handydeepspeech.Devel.json
data/: com.github.razzeee.handydeepspeech.desktop.in.in  com.github.razzeee.handydeepspeech.gschema.xml.in  com.github.razzeee.handydeepspeech.metainfo.xml.in.in
data/resources/: resources.gresource.xml
po/: POTFILES.in
src/: application.rs  main.rs  window.rs
