[package]
name = "handy-deepspeech"
version = "0.1.0"
authors = ["Kolja Lampe <razzeee@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.6", features = ["gettext-system"] }
gtk-macros = "0.3"
once_cell = "1.5"
deepspeech = "0.9.0"
audrey = "0.3"
dasp_interpolate = { version = "0.11", features = ["linear"] }
dasp_signal = "0.11"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
